# sfTheora

./: .gitignore  CMakeLists.txt  Changelog.md  License.md  Readme.md
dependencies/: Readme.txt
include/: sfTheora.h
include/sfTheora/: AudioInterface.h  Error.h  MemoryLoader.h  Video.h
sfTheora/: sfTheora.sln
sfTheora-CMake/: Changelog.txt
sfTheora-CMake/include/sfTheora/: Video.h
sfTheora/sfTheora/: License.txt  Readme.txt  sfTheora.vcxproj  sfTheora.vcxproj.filters
sfTheora/sfTheora/include/sfTheora/: Error.h
sfTheora/sfTheora/src/sfTheora/: AudioInterface.cpp  MemoryLoader.cpp
sfTheoraTest/: sfTheoraTest.sln
sfTheoraTest/sfTheoraTest/: Changelog.txt  sfTheoraTest.vcxproj
sfTheoraTest/sfTheoraTest/src/: main.cpp
src/sfTheora/: AudioInterface.cpp  MemoryLoader.cpp  Video.cpp
test/: main.cpp
